2009-Dec-20  yselkowitz

	* cygclass/autotools.cygclass: Document.

2009-Dec-14  yselkowitz

	* cygclass/ggz.cygclass: Stub documentation.
	(doggzmod): Fix for where CommandLine is not a full path.

2009-Nov-29  yselkowitz

	* lib/src_install.cygclass: Stub documentation.
	(__doinstall): Use libtool(1) to install libtool .la and .exe wrappers.
	(newman, newsman): Fix typos.
	(dosym): Use pushd/popd to avoid changing working directory.

2009-Nov-12  yselkowitz

	* cygclass/aspell-dict.cygclass: Document further.
	* cygclass/R.cygclass: Document further.
	(R_compile): Fix argument syntax for recent R.

2009-Nov-02  yselkowitz

	* cygclass/gst-plugins0.10.cygclass: Update for -bad .15.

2009-Oct-29  yselkowitz

	* lib/src_prep.cygpart (unpack): Add support for *.tar.lz archives.

2009-Oct-26  yselkowitz

	* cygclass/docbook.cygclass: Overhaul and document.

2009-Oct-20  yselkowitz

	* cygclass/rox.cygclass: Document. Remove ROX_MENU and ROX_MIME,
	as almost all ROX applications are unusable outside of the filer.
	Similarly, only install a wrapper if ROX_WRAPPER is defined.

2009-Oct-06  yselkowitz

	* data/mirrors (mirror_savannah): Define and document.

2009-Sep-10  yselkowitz

	* cygclass/gstreamer.cygclass: Document.
	* cygclass/gst-plugins.cygclass: Document.
	* cygclass/gst-plugins0.10.cygclass: Document.
	Update for -bad .14 and -ugly .13.

2009-Aug-17  yselkowitz

	Robodocize.
	* configure.ac: Check for robodoc.  Add AM_CONDITIONALs for other progs.
	* doc/Makefile.am: Add target for robodocs. Use AM_CONDITIONALs.
	* doc/robodoc.rc: Added.
	* cygclass/R.cygclass: Document.
	* cygclass/apache*.cygclass: Document.
	* cygclass/aspell-dict.cygclass: Document.
	* cygclass/gnome.org.cygclass: Document.

2009-Aug-13  yselkowitz

	* bin/cygport.in: Remove privbindir PATH handling, as everything has
	been converted to functions.
	* lib/pkg_info.cygpart (__list_deps): Adapt accordingly.

	* lib/src_postinst.cygpart (__src_postinst): Move __prepdoc up before